# xxx-user-service/api/user/v1/role_http.pb.go
@@ -1,8 +1,8 @@
 // Code generated by protoc-gen-go-http. DO NOT EDIT.
 // versions:
 // - protoc-gen-go-http v2.8.4
-// - protoc             v4.23.4
-// source: user/v1/role.proto
+// - protoc             v3.21.1
+// source: api/user/v1/role.proto
 
 package v1
 
@@ -19,11 +19,11 @@ var _ = binding.EncodeURL
 
 const _ = http.SupportPackageIsVersion1
 
-const OperationRoleAdd = "/api.helloworld.v1.Role/Add"
-const OperationRoleAssignPermission = "/api.helloworld.v1.Role/AssignPermission"
-const OperationRoleDeleteById = "/api.helloworld.v1.Role/DeleteById"
-const OperationRoleGetByCode = "/api.helloworld.v1.Role/GetByCode"
-const OperationRoleListPage = "/api.helloworld.v1.Role/ListPage"
+const OperationRoleAdd = "/api.user.v1.Role/Add"
+const OperationRoleAssignPermission = "/api.user.v1.Role/AssignPermission"
+const OperationRoleDeleteById = "/api.user.v1.Role/DeleteById"
+const OperationRoleGetByCode = "/api.user.v1.Role/GetByCode"
+const OperationRoleListPage = "/api.user.v1.Role/ListPage"
 
 type RoleHTTPServer interface {
 	Add(context.Context, *RoleSaveRequest) (*RoleReply, error)
@@ -35,14 +35,14 @@ type RoleHTTPServer interface {
 
 func RegisterRoleHTTPServer(s *http.Server, srv RoleHTTPServer) {
 	r := s.Route("/")
-	r.GET("/role/list", _Role_ListPage1_HTTP_Handler(srv))
-	r.POST("/role/add", _Role_Add1_HTTP_Handler(srv))
+	r.GET("/role/list", _Role_ListPage0_HTTP_Handler(srv))
+	r.POST("/role/add", _Role_Add0_HTTP_Handler(srv))
 	r.GET("/role/code", _Role_GetByCode0_HTTP_Handler(srv))
 	r.POST("/role/assignPerm", _Role_AssignPermission0_HTTP_Handler(srv))
 	r.POST("/role/delete", _Role_DeleteById0_HTTP_Handler(srv))
 }
 
-func _Role_ListPage1_HTTP_Handler(srv RoleHTTPServer) func(ctx http.Context) error {
+func _Role_ListPage0_HTTP_Handler(srv RoleHTTPServer) func(ctx http.Context) error {
 	return func(ctx http.Context) error {
 		var in RoleListRequest
 		if err := ctx.BindQuery(&in); err != nil {
@@ -61,7 +61,7 @@ func _Role_ListPage1_HTTP_Handler(srv RoleHTTPServer) func(ctx http.Context) err
 	}
 }
 
-func _Role_Add1_HTTP_Handler(srv RoleHTTPServer) func(ctx http.Context) error {
+func _Role_Add0_HTTP_Handler(srv RoleHTTPServer) func(ctx http.Context) error {
 	return func(ctx http.Context) error {
 		var in RoleSaveRequest
 		if err := ctx.Bind(&in); err != nil {
