# xxx-user-service/api/user/v1/user_http.pb.go
@@ -1,8 +1,8 @@
 // Code generated by protoc-gen-go-http. DO NOT EDIT.
 // versions:
 // - protoc-gen-go-http v2.8.4
-// - protoc             v4.23.4
-// source: user/v1/user.proto
+// - protoc             v3.21.1
+// source: api/user/v1/user.proto
 
 package v1
 
@@ -19,13 +19,13 @@ var _ = binding.EncodeURL
 
 const _ = http.SupportPackageIsVersion1
 
-const OperationUserAssignRole = "/api.helloworld.v1.User/AssignRole"
-const OperationUserCheckPermission = "/api.helloworld.v1.User/CheckPermission"
-const OperationUserCreateByEmail = "/api.helloworld.v1.User/CreateByEmail"
-const OperationUserDeleteById = "/api.helloworld.v1.User/DeleteById"
-const OperationUserListPage = "/api.helloworld.v1.User/ListPage"
-const OperationUserLoginByEmail = "/api.helloworld.v1.User/LoginByEmail"
-const OperationUserVerifyToken = "/api.helloworld.v1.User/VerifyToken"
+const OperationUserAssignRole = "/api.user.v1.User/AssignRole"
+const OperationUserCheckPermission = "/api.user.v1.User/CheckPermission"
+const OperationUserCreateByEmail = "/api.user.v1.User/CreateByEmail"
+const OperationUserDeleteById = "/api.user.v1.User/DeleteById"
+const OperationUserListPage = "/api.user.v1.User/ListPage"
+const OperationUserLoginByEmail = "/api.user.v1.User/LoginByEmail"
+const OperationUserVerifyToken = "/api.user.v1.User/VerifyToken"
 
 type UserHTTPServer interface {
 	// AssignRole 分配角色
@@ -46,16 +46,16 @@ type UserHTTPServer interface {
 
 func RegisterUserHTTPServer(s *http.Server, srv UserHTTPServer) {
 	r := s.Route("/")
-	r.GET("/user/list", _User_ListPage2_HTTP_Handler(srv))
+	r.GET("/user/list", _User_ListPage0_HTTP_Handler(srv))
 	r.POST("/user/createByEmail", _User_CreateByEmail0_HTTP_Handler(srv))
 	r.POST("/user/login", _User_LoginByEmail0_HTTP_Handler(srv))
 	r.POST("/user/assignRole", _User_AssignRole0_HTTP_Handler(srv))
-	r.POST("/user/delete", _User_DeleteById1_HTTP_Handler(srv))
+	r.POST("/user/delete", _User_DeleteById0_HTTP_Handler(srv))
 	r.POST("/user/checkPermission", _User_CheckPermission0_HTTP_Handler(srv))
 	r.POST("/user/verifyToken", _User_VerifyToken0_HTTP_Handler(srv))
 }
 
-func _User_ListPage2_HTTP_Handler(srv UserHTTPServer) func(ctx http.Context) error {
+func _User_ListPage0_HTTP_Handler(srv UserHTTPServer) func(ctx http.Context) error {
 	return func(ctx http.Context) error {
 		var in UserListRequest
 		if err := ctx.BindQuery(&in); err != nil {
@@ -140,7 +140,7 @@ func _User_AssignRole0_HTTP_Handler(srv UserHTTPServer) func(ctx http.Context) e
 	}
 }
 
-func _User_DeleteById1_HTTP_Handler(srv UserHTTPServer) func(ctx http.Context) error {
+func _User_DeleteById0_HTTP_Handler(srv UserHTTPServer) func(ctx http.Context) error {
 	return func(ctx http.Context) error {
 		var in UserDeleteRequest
 		if err := ctx.Bind(&in); err != nil {
