# xxx-user-service/openapi.yaml
@@ -3,7 +3,7 @@
 
 openapi: 3.0.3
 info:
-    title: ""
+    title: Permission API
     version: 0.0.1
 paths:
     /permission/add:
@@ -15,7 +15,7 @@ paths:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/api.helloworld.v1.PermSaveRequest'
+                            $ref: '#/components/schemas/PermSaveRequest'
                 required: true
             responses:
                 "200":
@@ -23,7 +23,13 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/api.helloworld.v1.PermReply'
+                                $ref: '#/components/schemas/PermReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /permission/list:
         get:
             tags:
@@ -69,7 +75,13 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/api.helloworld.v1.PermListReply'
+                                $ref: '#/components/schemas/PermListReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /permission/update:
         post:
             tags:
@@ -79,7 +91,7 @@ paths:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/api.helloworld.v1.PermSaveRequest'
+                            $ref: '#/components/schemas/PermSaveRequest'
                 required: true
             responses:
                 "200":
@@ -87,308 +99,24 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/api.helloworld.v1.PermReply'
-    /role/add:
-        post:
-            tags:
-                - Role
-            operationId: Role_Add
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/api.helloworld.v1.RoleSaveRequest'
-                required: true
-            responses:
-                "200":
-                    description: OK
+                                $ref: '#/components/schemas/PermReply'
+                default:
+                    description: Default error response
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/api.helloworld.v1.RoleReply'
-    /role/assignPerm:
-        post:
-            tags:
-                - Role
-            operationId: Role_AssignPermission
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/api.helloworld.v1.RoleAssignPermRequest'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/api.helloworld.v1.RoleOk'
-    /role/code:
-        get:
-            tags:
-                - Role
-            operationId: Role_GetByCode
-            parameters:
-                - name: roleCode
-                  in: query
-                  schema:
-                    type: string
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/api.helloworld.v1.RoleReply'
-    /role/delete:
-        post:
-            tags:
-                - Role
-            operationId: Role_DeleteById
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/api.helloworld.v1.RoleDeleteRequest'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/api.helloworld.v1.RoleOk'
-    /role/list:
-        get:
-            tags:
-                - Role
-            operationId: Role_ListPage
-            parameters:
-                - name: pageNo
-                  in: query
-                  schema:
-                    type: string
-                - name: pageSize
-                  in: query
-                  schema:
-                    type: string
-                - name: sort
-                  in: query
-                  schema:
-                    type: string
-                - name: direction
-                  in: query
-                  schema:
-                    type: string
-                - name: roleCode
-                  in: query
-                  schema:
-                    type: string
-                - name: roleName
-                  in: query
-                  schema:
-                    type: string
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/api.helloworld.v1.RoleListReply'
-    /user/assignRole:
-        post:
-            tags:
-                - User
-            description: 分配角色
-            operationId: User_AssignRole
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/api.helloworld.v1.AssignRoleRequest'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/api.helloworld.v1.UserOk'
-    /user/checkPermission:
-        post:
-            tags:
-                - User
-            description: 校验权限
-            operationId: User_CheckPermission
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/api.helloworld.v1.CheckPermissionRequest'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/api.helloworld.v1.UserOk'
-    /user/createByEmail:
-        post:
-            tags:
-                - User
-            description: 邮箱注册
-            operationId: User_CreateByEmail
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/api.helloworld.v1.UserEmailRequest'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/api.helloworld.v1.UserReply'
-    /user/delete:
-        post:
-            tags:
-                - User
-            description: 删除用户
-            operationId: User_DeleteById
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/api.helloworld.v1.UserDeleteRequest'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/api.helloworld.v1.UserOk'
-    /user/list:
-        get:
-            tags:
-                - User
-            description: 用户例表
-            operationId: User_ListPage
-            parameters:
-                - name: pageNo
-                  in: query
-                  description: 当前页数
-                  schema:
-                    type: string
-                - name: pageSize
-                  in: query
-                  description: 每页数量
-                  schema:
-                    type: string
-                - name: sort
-                  in: query
-                  description: 排序字段
-                  schema:
-                    type: string
-                - name: direction
-                  in: query
-                  description: 排序类型：asc、desc
-                  schema:
-                    type: string
-                - name: realName
-                  in: query
-                  description: 姓名
-                  schema:
-                    type: string
-                - name: email
-                  in: query
-                  description: 邮箱
-                  schema:
-                    type: string
-                - name: status
-                  in: query
-                  description: 状态
-                  schema:
-                    type: integer
-                    format: int32
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/api.helloworld.v1.UserListReply'
-    /user/login:
-        post:
-            tags:
-                - User
-            description: 邮箱登录
-            operationId: User_LoginByEmail
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/api.helloworld.v1.UserEmailLoginRequest'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/api.helloworld.v1.LoginReply'
-    /user/verifyToken:
-        post:
-            tags:
-                - User
-            description: 验证token
-            operationId: User_VerifyToken
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/api.helloworld.v1.UserVerifyTokenRequest'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/api.helloworld.v1.UserClaimsReply'
+                                $ref: '#/components/schemas/Status'
 components:
     schemas:
-        api.helloworld.v1.AssignRoleRequest:
+        GoogleProtobufAny:
             type: object
             properties:
-                userId:
+                '@type':
                     type: string
-                    description: 用户ID
-                roleCode:
-                    type: string
-                    description: 角色编号
-            description: 分配角色
-        api.helloworld.v1.CheckPermissionRequest:
-            type: object
-            properties:
-                sub:
-                    type: string
-                obj:
-                    type: string
-                act:
-                    type: string
-        api.helloworld.v1.LoginReply:
-            type: object
-            properties:
-                token:
-                    type: string
-                    description: token
-            description: 登录响应
-        api.helloworld.v1.PermListReply:
+                    description: The type of the serialized message.
+            additionalProperties: true
+            description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
+        PermListReply:
             type: object
             properties:
                 count:
@@ -402,8 +130,8 @@ components:
                 permList:
                     type: array
                     items:
-                        $ref: '#/components/schemas/api.helloworld.v1.PermReply'
-        api.helloworld.v1.PermReply:
+                        $ref: '#/components/schemas/PermReply'
+        PermReply:
             type: object
             properties:
                 id:
@@ -419,7 +147,7 @@ components:
                     format: int32
                 parentId:
                     type: string
-        api.helloworld.v1.PermSaveRequest:
+        PermSaveRequest:
             type: object
             properties:
                 id:
@@ -435,147 +163,21 @@ components:
                     format: int32
                 parentId:
                     type: string
-        api.helloworld.v1.RoleAssignPermRequest:
+        Status:
             type: object
             properties:
-                RoleId:
+                code:
+                    type: integer
+                    description: The status code, which should be an enum value of [google.rpc.Code][google.rpc.Code].
+                    format: int32
+                message:
                     type: string
-                PermIdList:
+                    description: A developer-facing error message, which should be in English. Any user-facing error message should be localized and sent in the [google.rpc.Status.details][google.rpc.Status.details] field, or localized by the client.
+                details:
                     type: array
                     items:
-                        type: string
-        api.helloworld.v1.RoleDeleteRequest:
-            type: object
-            properties:
-                id:
-                    type: string
-        api.helloworld.v1.RoleListReply:
-            type: object
-            properties:
-                count:
-                    type: string
-                pageNo:
-                    type: integer
-                    format: int32
-                pageSize:
-                    type: integer
-                    format: int32
-                roleList:
-                    type: array
-                    items:
-                        $ref: '#/components/schemas/api.helloworld.v1.RoleReply'
-        api.helloworld.v1.RoleOk:
-            type: object
-            properties:
-                success:
-                    type: boolean
-        api.helloworld.v1.RoleReply:
-            type: object
-            properties:
-                id:
-                    type: string
-                roleCode:
-                    type: string
-                roleName:
-                    type: string
-        api.helloworld.v1.RoleSaveRequest:
-            type: object
-            properties:
-                id:
-                    type: string
-                roleCode:
-                    type: string
-                roleName:
-                    type: string
-        api.helloworld.v1.UserClaimsReply:
-            type: object
-            properties:
-                id:
-                    type: string
-                sub:
-                    type: string
-                role:
-                    type: string
-        api.helloworld.v1.UserDeleteRequest:
-            type: object
-            properties:
-                id:
-                    type: string
-        api.helloworld.v1.UserEmailLoginRequest:
-            type: object
-            properties:
-                email:
-                    type: string
-                    description: 邮箱
-                password:
-                    type: string
-                    description: 密码
-            description: 邮箱登录
-        api.helloworld.v1.UserEmailRequest:
-            type: object
-            properties:
-                email:
-                    type: string
-                    description: 邮箱
-                password:
-                    type: string
-                    description: 密码
-            description: 用户邮箱信息
-        api.helloworld.v1.UserListReply:
-            type: object
-            properties:
-                count:
-                    type: string
-                    description: 总数量
-                pageNo:
-                    type: integer
-                    description: 当前页
-                    format: int32
-                pageSize:
-                    type: integer
-                    description: 每页数
-                    format: int32
-                userList:
-                    type: array
-                    items:
-                        $ref: '#/components/schemas/api.helloworld.v1.UserReply'
-                    description: 用户例表
-            description: 用户列表
-        api.helloworld.v1.UserOk:
-            type: object
-            properties:
-                success:
-                    type: boolean
-        api.helloworld.v1.UserReply:
-            type: object
-            properties:
-                id:
-                    type: string
-                    description: 用户ID
-                realName:
-                    type: string
-                    description: 姓名
-                userName:
-                    type: string
-                    description: 用户名
-                email:
-                    type: string
-                    description: 邮箱
-                status:
-                    type: integer
-                    description: 状态
-                    format: int32
-                roleCode:
-                    type: string
-                    description: 角色
-            description: 用户信息
-        api.helloworld.v1.UserVerifyTokenRequest:
-            type: object
-            properties:
-                token:
-                    type: string
+                        $ref: '#/components/schemas/GoogleProtobufAny'
+                    description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
+            description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
 tags:
     - name: Permission
-    - name: Role
-    - name: User
-      description: 用户管理
